<resources>
    <string name="app_name">SPatch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sp_app">Apps</string>
    <string name="sp_mod">Modules</string>
    <string name="sp_sk_info">SK Team Not only infomation masterly but master all.</string>
    <string name="visit_sk">Visit</string>
    <string name="sp_ensure_local_ext">Which place you wanna select from? You can select external apk from file explorer.</string>
    <string name="sp_install_from_local">Local</string>
    <string name="sp_install_from_ext">External</string>
    <string name="sp_processing_apk">Processing...</string>
    <string name="sp_mod_success">Modify Success</string>
    <string name="sp_accept">Accept</string>
    <string name="sp_app_loc">Your new application package may locate at</string>
    <string name="sp_install">Install It</string>
    <string name="sp_now_install">Do you wanna install immediately? Note: You must uninstall origin application before you install this application.</string>
    <string name="sp_deny">Deny</string>
    <string name="sp_failed_help">This application may not be supported. Please try again or change versions of application.</string>
    <string name="sp_mod_failed">Modify Failed</string>
    <string name="title_activity_select_app">Select Application</string>
    <string name="sp_select">Select</string>
    <string name="sp_back">Back</string>
    <string name="sp_loading">Loading data...</string>
    <string name="sp_load_complete">Load Finish.</string>
    <string name="sp_game_tips">Pull down and let go for gaming, hold up for game continuing.</string>
    <string name="sp_mod_add2list">Use Module</string>
    <string name="sp_mod_rem_from_list">Do Not Use</string>
    <string name="sp_ensure_add_mods">Do you wanna add those mod(s)?</string>
    <string name="title_activity_settings">SK Settings</string>
    <string name="sp_settings_non_modify">Non APK Modify Mode</string>
    <string name="sp_settings_alert_when_done">Show Notification When Task Done</string>
    <string name="sp_settings_unpack">Auto  Unpacking</string>
    <string name="sp_settings_disable_mod">Disable All Modules</string>
    <string name="sp_settings_disable_safe_mode">Disable Safe Mode Temporarily</string>
    <string name="sp_settings_test_mode">Debug Mode</string>
    <string name="sp_core_load_failed">SPatch core load failed. Please examine libs and ensure all need files were in right place. (Are you change your settings recently?)</string>
    <string name="sp_core_load_failed_title">SK Fatal Error</string>
    <string name="sp_core">SPatch Core</string>
    <string name="sp_core_dsp">SPatch core. A powerful and Fuocoso heart!</string>
    <string name="sp_info">SPatch is a software that enables native applications to load Xposed modules without ROOT or unlock. There are three operation modes of Tianjian: modified APK mode, modified-free mode and global mode. Simply click on the application + number and select the application installation package according to the prompt to use the module easily. It supports a variety of modules, including the Xposed module you made yourself. It also supports the integration of modules into the installation package (in the module list, click on the module information and use the module). At present, it can enable or close the global mode and no modification mode in the settings page. The application needs to be rebuilt after opening the modifier-free mode. It can be set up to send information to the notification bar after each application is built. It can also be set up to disable the whole module, intelligent shelling and anti-reinforcement functions (intelligent shelling, anti-reinforcement and non-modification construction applications need to download additional native library files). In addition, it can open debugging mode and disable security mode in the settings. To facilitate developers to analyze the work of the module. The reconstructed application will load all modules installed locally by default, and the integrated module will no longer rely on the module software installed locally, so that the installation package can be shared with others. Note that the modifier-free mode relies on the application of the almanac. If the application of the almanac is uninstalled, all application data of the modifier-free mode will be empty and unrecoverable. The global mode also relies on the application of the heavenly observer. When the global mode is enabled, if the application of the heavenly observer is uninstalled, all the modules of the heavenly observer will be invalid. This application is only for learning. Because the application has the function of anonymous information collection, it will require the information rights of mobile phones. The information collected by this application may contain your privacy information. We will not share your information with third parties without your authorization. This information is only for our analysis and use. Please make sure that users with confidentiality requirements will not collect your confidential information, and we will not be responsible for your information leakage. This application may damage your equipment, we will not be responsible for changes in your equipment, if your equipment after using this application crash, can not boot, overheating and so on, please report to us. Author: Haili (QQ 384550791), website http://www.fou.ink/, the right of final interpretation of this application belongs to the author. If you continue to use this software, you will receive all the agreements. Thank you for your understanding and support. Thank you very much for GanYao (SandHook author, who provides strong support for the core technology of this application), Windy (Xpatch author, who provides ideas for application implementation), Lody (Whale framework developer), JCoder (thank the big guy for helping to implement the reinforcement and restoration technology), Liu Hengfu (who provides ideas for application core), and Ningru.（ Thank you for fixing several serious BUGs in the no-modification mode, as well as my application users and testers. Thank you for supporting this application!</string>
    <string name="sp_about">About SPatch</string>
    <string name="sp_search">Search Apps...</string>
    <string name="app_powered_by">Powered by SandHook</string>
    <string name="sp_supersu">SU</string>
    <string name="sp_require_su">%s is applying for super user permission, accept? Notice: some application may do harm for your personal computer with root access. If you have less knowledge of this application, press deny for sound.</string>
    <string name="sp_launch">Launch</string>
    <string name="sp_remove">Remove</string>
    <string name="sp_launch_app_now">Do you wanna launch application immediately?</string>
    <string name="sp_install_success">Installation success. Pull down list for refresh, you can launch application by click application list.</string>
    <string name="sp_open_mod_settings">Module Settings</string>
    <string name="sp_nonmod_enable_tips">Congratulations! You now unlock non-modify mode, this mode can run application in non-modify and need no resign apk. You can only select application local, and you can click use module in alert dialog as you click module in modules list.</string>
    <string name="sp_unpack_enable_tips">Congratulations on unlocking the shelling function. Please re-add the application. The files from the application dump will be stored in the application external storage data directory.</string>
    <string name="sp_apkeditor">APK Editor</string>
    <string name="sp_apkeditor_dexedit">Edit Dex File</string>
    <string name="sp_apkeditor_class">Class</string>
    <string name="sp_apkeditor_arsc">Arsc Translate</string>
    <string name="sp_apkeditor_xml">XML Editor</string>
    <string name="sp_apkeditor_crack_sign">Signing Crack</string>
    <string name="sp_hexeditor">HEX Editor</string>
    <string name="sp_apkeditor_translate">Translate Resource</string>
    <string name="sp_apkeditor_method">Method</string>
    <string name="sp_perm_setting">Permission Setting</string>
    <string name="sp_new_modify_mode">V2 Modify Mode</string>
    <string name="sp_create_shortcut">Create Shortcut</string>
    <string name="sp_app_settings">App Settings</string>
    <string name="sk_modifyv2_patch">Select Patch File</string>
    <string name="sp_perm_must_allow">Permission Storage And Phone Stats is required. Please enable those permission in System Settings - App Settings - Permission.</string>
    <string name="sp_user_privacy_policy">User Privacy Policy</string>
    <string name="backup_restore">Backup And Restore</string>
</resources>