<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sk.spatch.act.SettingsAct"
    tools:showIn="@layout/activity_settings">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/sp_settings_non_modify"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        />
    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/sp_settings_alert_when_done"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switch3"
        />
    <Switch
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/sp_settings_unpack"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switch4"
        />
    <Switch
        android:id="@+id/switch4"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/sp_settings_disable_mod"
        app:layout_constraintTop_toBottomOf="@+id/switch3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switch5"
        />
    <Switch
        android:id="@+id/switch5"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/sp_settings_disable_safe_mode"
        app:layout_constraintTop_toBottomOf="@+id/switch4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switch6"
        />
    <Switch
        android:id="@+id/switch6"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/sp_settings_test_mode"
        app:layout_constraintTop_toBottomOf="@+id/switch5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switch7"
        />
    <Switch
        android:id="@+id/switch7"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/sp_new_modify_mode"
        app:layout_constraintTop_toBottomOf="@+id/switch6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnPermSetting"
        />

    <Button
        android:id="@+id/btnPermSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp_perm_setting"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/switch7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnBackupRestore"/>

    <Button
        android:id="@+id/btnBackupRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_restore"
        app:layout_constraintTop_toBottomOf="@+id/btnPermSetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>